fix: report statistics contain disabled assets